Github.css
/* ... */
.entry h2 strong a {
    float: left;
    color: var(--main-color) !important;
}

.entry h2::before {
    content: "Last commit 123456 ";
}

.entry h2 a::after {
    content: " Update file ";
    font-weight: 400;
    color: var(--secondary-color);
}

.entry h2 a:not(strong a) {
    display: none;
}

.user-full .username-colored {
    top: 78px;
    position: absolute;
    color: var(--link-color) !important;
    font-weight: 400 !important;
    left: 32px;
    font-size: 20px;
}

.entrywrap {
    background-color: transparent !important;
    border: 2px solid var(--border) !important;
    border-radius: 6px;
}

#content {
    width: 1280px;
    margin-left: calc(50vw - 640px);
    margin-top: 60px;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry {
    max-height: 38px !important;
    overflow: hidden;
    border: 2px solid var(--border) !important;
    border-bottom-width: 1px !important;
    margin: 0 !important;
    display: flex;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5)) .entrywrap {
    border: 0 !important;
    width: 555px;
    flex: none;
    padding: 0 !important;
    white-space: nowrap;
    margin-right: 20px !important;
    margin-top: 1% !important;
    color: var(--secondary-color);
    margin-left: 0px !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry .efooter {
    order: 10;
}

.entry {
    max-height: none;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h1 {
    height: fit-content;
    width: 245px;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 14px;
    padding-top: 1%;
    padding-left: 10px;
    flex: none;
    color: var(--main-color) !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h1 a {
    font-weight: 400 !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h2 {
    height: fit-content;
    width: fit-content;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 14px;
    flex: none;
    order: 3;
    color: var(--secondary-color) !important;
    text-align: left !important;
    border: 0 !important;
    margin: 0;
    padding: 1% 0 0 0;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h2::before {
    content: "" !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h2 a::after {
    content: "" !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h1 a::before {
    content: "" !important;
}

#main>div:not(:first-of-type:nth-last-of-type(3):nth-last-child(5))>.entry h2 a {
    display: none;
}

.entry h1 a {
    color: var(--main-color) !important;
    font-size: 16px;
    font-weight: 600;
}

.entry h1 a::before {
    content: "repo / ";
    color: var(--link-color) !important;
}

#main {
    width: calc(100% - 270px);
}

#navigation_box {
    border: 0;
    background-color: transparent;
    top: 100px;
    left: 32px;
    width: fit-content;
}

#navigation_box>div {
    float: left;
    font-size: 0px;
}

#left_navigation_box a:last-child {
    font-weight: 600;
    color: var(--main-color) !important;
    border-bottom: 2px #f78166 solid !important;
}

#navigation_box a {
    font-weight: 400;
    font-size: 14px;
    color: var(--secondary-color) !important;
    padding: 16px;
    padding-bottom: 4px;
    line-height: 30px;
    transition: 0.12s ease-out;
}

#navigation_box a:hover {
    color: var(--main-color) !important;
    border-bottom: 2px solid var(--secondary-color);
}

#post-new-entry-img {
    display: none;
}

#post-new-entry {
    background: #238636;
    border-radius: 6px;
    padding: 5px 16px 5px 16px;
    color: white !important;
    border: 1px solid #2ea043;
    transition: 0.1s ease;
}

#post-new-entry-p {
    margin-bottom: 16px;
    text-align: right;
}

#post-new-entry:hover {
    background: #2ea043;
    border: 1px solid #3fb950;
}

/* contribs */
#contrib-widget .widget-title {
    font-size: 17px;
}

body {
    counter-reset: contribcount;
}

#contrib-widget a {
    font-size: 14px !important;
    color: var(--main-color) !important;
}

#contrib-widget a::after {
    counter-increment: contribcount 1;
    content: counter(contribcount);
    font-size: 0px;
}

#contrib-widget .widget-content {
    display: flex;
    font-size: 0px;
    flex-direction: column-reverse;
}

#contrib-widget a:last-child::after {
    font-size: 12px !important;
    background-color: var(--border);
    border: 1px solid transparent;
    border-radius: 2em;
    color: var(--main-color);
    display: inline-block;
    line-height: 18px;
    min-width: 10px;
    padding: 0 6px;
    text-align: center;
    font-weight: bold;
    position: absolute;
    transform: translateY(-26px);
    right: calc(50vw - 550px);
    margin-left: 4px;
}

.blog-edit-post {
    font-size: 0px;
}

.blog-edit-post::before {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' height='16' viewBox='0 0 16 16' version='1.1' width='16' data-view-component='true' class='octicon octicon-pencil'%3E%3Cpath fill-rule='evenodd' d='M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z'%3E%3C/path%3E%3C/svg%3E");
    filter: invert(var(--color-invert));
}

.blog-delete-post,
.blog-moderate-topic {
    font-size: 0px;
}
/* ... */

